<resources>
    <string name="app_name">NINE GAG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="label_enviar">Enviar</string>
    <string name="label_cancelar">Cancelar</string>

    <string name="menu_todas">TODAS</string>
    <string name="menu_dogo">DOGO</string>
    <string name="menu_narutinho">NARUTINHO</string>
    <string name="menu_got">GOT</string>
    <string name="menu_nsfw">NSFW</string>
    <string name="menu_food">FOOD</string>
    <string name="menu_pokemon">POKÉMON</string>
    <string name="menu_wtf">WTF</string>
    <string name="menu_star_wars">STAR WARS</string>
    <string name="menu_it_nerd">IT NERD</string>
    <string name="menu_black_humor">BLACK HUMOR</string>
    <string name="menu_stuff">STUFF</string>
    <string name="menu_logout">Logout</string>

    <string-array name="categorias">
        <item>DOGO</item>
        <item>NARUTINHO</item>
        <item>GOT</item>
        <item>NSFW</item>
        <item>FOOD</item>
        <item>POKÉMON</item>
        <item>WTF</item>
        <item>STAR WARS</item>
        <item>IT NERD</item>
        <item>BLACK HUMOR</item>
        <item>STUFF</item>
    </string-array>
</resources>
