<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dogo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dogo" />
        <item
            android:id="@+id/nav_narutinho"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_narutinho" />
        <item
            android:id="@+id/nav_got"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_got" />
        <item
            android:id="@+id/nav_nsfw"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_nsfw" />
        <item
            android:id="@+id/nav_food"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_pokemon"
            android:title="@string/menu_pokemon" />
        <item
            android:id="@+id/nav_wtf"
            android:title="@string/menu_wtf" />
        <item
            android:id="@+id/nav_star_wars"
            android:title="@string/menu_star_wars" />
        <item
            android:id="@+id/nav_it_nerd"
            android:title="@string/menu_it_nerd" />
        <item
            android:id="@+id/nav_black_humor"
            android:title="@string/menu_black_humor" />
        <item
            android:id="@+id/nav_stuff"
            android:title="@string/menu_stuff" />
    </group>

    <item android:title="Perfil">
        <menu>
            <item
                android:id="@+id/nav_excluir_post"
                android:title="Excluir post" />
            <item
                android:id="@+id/na"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
